working on hopfield

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -20,7 +20,8 @@
     }
    },
    "source": [
-    "A Hopfield network is a form of recurrent artificial neural network popularized by John Hopfield in [1982](http://www.ncbi.nlm.nih.gov/pubmed/6953413).  Hopfield nets are autoassociative networks, which means that patterns of their own activity are stored in the network inner weights by associating the concurrent  activations of the network units in a hebbian way. Such a network can retrieve a piece of data from only a tiny sample of itself, because the activated units trigger all the others that are associated with them."
+    "A Hopfield network is a form of recurrent artificial neural network popularized by John Hopfield in [1982](http://www.ncbi.nlm.nih.gov/pubmed/6953413).   It is an autoassociative network, which means that it can store a piece of data given as the activation of its own units and then retrieve it when you trigger a subpopulation of its units that is equal to a tiny sample of the same piece of data.\n",
+    "Learning is done by changing the weights of the connections between its units in a  *fake* hebbian way. You treat each input pattern as if it were the vector of the activations of units and highten the weights of the connections between concurrently active units. "
    ]
   },
   {
@@ -48,8 +49,8 @@
     "\n",
     "The activation of a unit in a Hopfield network is updated by evaluating the sign of the weighted sum of its inputs:\n",
     "$$ \n",
-    "x_i =\n",
-    "  \\begin{cases}\n",
+    "x_i = \n",
+    "\\begin{cases}\n",
     "    -1  & \\quad \\text{if } \\sum_{j} w_{ij}x_j <  0\\\\\n",
     "     1  & \\quad \\text{otherwise}\\\\\n",
     "  \\end{cases}\n",
@@ -58,12 +59,13 @@
     "\n",
     "#### Syncronous update\n",
     "\n",
-    "The units are updated altogether at each step, using as inputs the freezed activations of themselves at the previous step. \n",
+    "The units are updated altogether at each step, using as inputs the *freezed* activations of themselves at the previous step. \n",
     "\n",
     "In python you can write:\n",
     "\n",
     "```python\n",
-    "for i in xrange(n):    # n = len(x)\n",
+    "# n = len(x)\n",
+    "for i in xrange(n): \n",
     "    w_sum = 0\n",
     "    for j in xrange(n):\n",
     "        w_sum += w[i,j]*x_previous[j]\n",
@@ -686,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -703,16 +705,17 @@
        "\n",
        "div.MathJax_Display {padding: 40px}\n",
        "div.input_area  { padding:10px; }\n",
+       ".rendered_html p{ text-align: left }\n",
        "div.input_area>div.highlight  { padding:10px; }\n",
        "\n",
        "/* FONT_CODE */\n",
        ".input_area pre { font-size:12px; }\n",
        "\n",
        "/* FONT_TEXT */\n",
-       "div.text_cell_render { font-size:28px; text-align: left }\n",
+       "div.text_cell_render { font-size:24px; text-align: left; line-height: 120% }\n",
        "\n",
        "/* FONT_QUOTE */\n",
-       "div.text_cell_render pre { font-size:14px; }\n",
+       "div.text_cell_render pre { font-size:14px; line-height: 120% }\n",
        "\n",
        "/* BACKGROUND */\n",
        "div .input_area { background-color:#333333;}\n",
@@ -802,10 +805,10 @@
        "/* JUPYTER */\n",
        "\n",
        "/* FONT_EDIT */\n",
-       ".cm-s-default span { font-size:16px; line-height:120% }\n",
+       ".cm-s-default span { font-size:24px; line-height:120% }\n",
        "\n",
        "/* BACKGROUND_EDIT */\n",
-       "div .cm-s-default { background-color: #888888;}\n",
+       "div .cm-s-default { background-color: #dddddd;}\n",
        "\n",
        "/* CURSOR */\n",
        ".input_area .CodeMirror div.CodeMirror-cursor { border-left: 5px solid #FFFFFF; }\n",
@@ -852,7 +855,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
