--- a/course/feedforward.ipynb
+++ b/course/feedforward.ipynb
@@ -4,17 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Perceptron"
+    "# The perceptron\n",
+    "\n",
+    "Perceptrons are the simpliest form of feedforward networks. and it is a [linear classifier](https://en.wikipedia.org/wiki/Linear_classifier). A perceptron is basically formed by a layer of input units and a layer of output units. In the simpliest case the output layer is formed by just one unit."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -189,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -354,7 +347,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
