working on hopfield

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -145,7 +145,7 @@
     "\n",
     "\n",
     "\n",
-    ">* A general rule: **dot product** is for spreading the activity throughout a network, while **outer product** is for weight update\n",
+    ">* A general rule: the **dot product** is for spreading the activity throughout a network, while the **outer product** is for weight update\n",
     "\n",
     "### Energy function\n",
     "In each state of the network we can calculate a value that is given by:\n",
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -855,7 +855,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
