working on hopfield

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -709,7 +709,7 @@
        "div.input_area>div.highlight  { padding:10px; }\n",
        "\n",
        "/* FONT_CODE */\n",
-       ".input_area pre { font-size:12px; }\n",
+       ".input_area pre { font-size:10px; line-height: 120% }\n",
        "\n",
        "/* FONT_TEXT */\n",
        "div.text_cell_render { font-size:24px; text-align: left; line-height: 140% }\n",
@@ -855,7 +855,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
