--- a/course/mnist.ipynb
+++ b/course/mnist.ipynb
@@ -143,6 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Utilities\n",
     "Let us include few utility functions:"
    ]
   },
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -212,15 +213,18 @@
        "/* PRINT */\n",
        "\n",
        "div.MathJax_Display {padding: 40px}\n",
+       "div.input_area  { padding:10px; }\n",
+       ".rendered_html p{ text-align: left }\n",
+       "div.input_area>div.highlight  { padding:10px; }\n",
        "\n",
        "/* FONT_CODE */\n",
-       ".input_area pre { font-size:12px; }\n",
+       ".input_area pre { font-size:10px; line-height: 120% }\n",
        "\n",
        "/* FONT_TEXT */\n",
-       "div.text_cell_render { font-size:28px; text-align: left }\n",
+       "div.text_cell_render { font-size:24px; text-align: left; line-height: 140% }\n",
        "\n",
        "/* FONT_QUOTE */\n",
-       "div.text_cell_render pre { font-size:14px; }\n",
+       "div.text_cell_render pre { font-size:14px; line-height: 120% }\n",
        "\n",
        "/* BACKGROUND */\n",
        "div .input_area { background-color:#333333;}\n",
@@ -310,10 +314,10 @@
        "/* JUPYTER */\n",
        "\n",
        "/* FONT_EDIT */\n",
-       ".cm-s-default span { font-size:16px; line-height:120% }\n",
+       ".cm-s-default span { font-size:24px; line-height:120% }\n",
        "\n",
        "/* BACKGROUND_EDIT */\n",
-       "div .cm-s-default { background-color: #888888;}\n",
+       "div .cm-s-default { background-color: #dddddd;}\n",
        "\n",
        "/* CURSOR */\n",
        ".input_area .CodeMirror div.CodeMirror-cursor { border-left: 5px solid #FFFFFF; }\n",
@@ -360,7 +364,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
