--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -48,23 +48,16 @@
     "### Spreading\n",
     "\n",
     "The activation of a unit in a Hopfield network is updated by evaluating the sign of the weighted sum of its inputs:\n",
-    "<table width=\"100%\">\n",
-    "<tr>\n",
-    "<td>\n",
-    "<img src=\"sign_function.png\" alt=\"sign_function\" width=\"300\" >\n",
-    "</td>\n",
-    "</tr>\n",
-    "<tr>\n",
-    "<td>\n",
+    "\n",
+    "![](sign_function.png)\n",
+    "\n",
     "$$ \n",
     "x_i = \\begin{cases}\n",
     "  -1  & \\quad \\text{if } \\sum_{j} w_{ij}x_j <  0\\\\\n",
     "   1  & \\quad \\text{otherwise}\\\\\n",
     "  \\end{cases}\n",
     "$$ \n",
-    "</td>\n",
-    "</tr>\n",
-    "</table>\n",
+    "\n",
     "There are two ways to implement the update of the units: **synchronous** and **asynchronous** update.  \n",
     "\n",
     "#### Syncronous update\n",
@@ -659,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -831,7 +824,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
