--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -99,7 +99,7 @@
     "    w_sum += w[i,j]*x[j]\n",
     "x[i] = sgn(w_sum)\n",
     "```\n",
-    "Using linear algebra leads to a shorter form also in this case:`\n",
+    "Using linear algebra leads to a shorter form also in this case:\n",
     "\n",
     "```python\n",
     "i = chosen_index\n",
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -824,7 +824,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
