hopfield and perceptron

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "figure 1: an abstract example showing the functioning of an autoassociative network. On the left the network weights after learning. On the center, we trigger only one unit. On the right, all the associated units become activated.\n",
     "\n",
-    "![figure_1](hopfield.png)"
+    "![figure_1](hopfield.svg)"
    ]
   },
   {
@@ -49,7 +49,7 @@
     "\n",
     "The activation of a unit in a Hopfield network is updated by evaluating the sign of the weighted sum of its inputs:\n",
     "\n",
-    "![](sign_function.png)\n",
+    "![](sign_function.svg)\n",
     "\n",
     "$$ \n",
     "x_i = \\begin{cases}\n",
@@ -81,7 +81,7 @@
     "$$\n",
     "\\mathbf{x} = sgn(\\mathbf{W}\\mathbf{x})\n",
     "$$\n",
-    "where $\\mathbf{x}$ is the vector of activations, $\\mathbf{W}$ is the matrix of inner weights and all the weighted sums are calculated at once with the [dot product](https://en.wikipedia.org/wiki/Dot_product#Algebraic_definition) $\\mathbf{W}\\mathbf{x}$. \n",
+    "where $\\mathbf{x}$ is the vector of activations, $\\mathbf{W}$ is the matrix of inner weights and $\\mathbf{W}\\mathbf{x}$ is the [dot product](https://en.wikipedia.org/wiki/Dot_product#Algebraic_definition), a linear algebra operator that allows to calculate the  weighted sum at once. \n",
     "Linear algebra notation is a far better way to implement neural networks in a program than iterating units. In particular, writing formulas with linear algebra notation in python (through the numpy library) improves both speed and readability. In the case of units activations in python you can write:\n",
     "```python\n",
     "x = sgn(dot(w,x))\n",
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -824,7 +824,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
