--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -8,19 +8,36 @@
     "\n",
     "Perceptrons are the simpliest form of feedforward networks. and it is a [linear classifier](https://en.wikipedia.org/wiki/Linear_classifier). A perceptron is basically formed by a layer of input units and a layer of output units. In the simpliest case the output layer is formed by just one unit:\n",
     "\n",
-    "![](perceptron.png)\n",
-    "\n",
-    "At each timestep of the simulation the first layer of units is directly triggered by the input vector. One unit of this layer , the bias, is not included in this update. instead it is permanently set to 1.\n",
+    "![](perceptron.svg)\n",
+    "### Spreading\n",
+    "At each timestep of the simulation the first layer of units $\\mathbf{x}=[x_0,\\dots,x_n]$ is directly triggered by the input vector $\\mathbf{p}_k=[p_{k0},\\dots,p_{kn}]$. One unit of this layer, the bias, is not included in this update. instead it is permanently set to 1.\n",
     "Each connection from a unit of the first layer to the output unit has a weight that is initially set to 0. The activation of the output unit is given by the weighted sum of the input units plus the weighted bias:\n",
     "$$\n",
     "y = \\sum_{i=1}^{n+1} w_i x_i + w_0\n",
     "$$\n",
-    "where $n$ is the length of the input vector.\n",
+    "In python you can write:\n",
     "\n",
-    "In its simpliest form, learning is simply given by:\n",
+    "```python\n",
+    "y = w[0]\n",
+    "for i in xrange(n): \n",
+    "    y += w[i]*x[i]\n",
+    "```\n",
+    "Using linear algebra we can rewrite it in a shorter form as:\n",
     "$$\n",
-    "\\Delta w =\n",
-    "$$"
+    "\\mathbf{y} = \\mathbf{W}\\mathbf{\\tilde{x}}\n",
+    "$$\n",
+    "where $\\mathbf{\\tilde{x}} = (1, x_0, \\dots, x_n)$ and $\\mathbf{W}\\mathbf{\\tilde{x}}$ is is the [dot product](https://en.wikipedia.org/wiki/Dot_product#Algebraic_definition), a linear algebra operator that allows to calculate the  weighted sum at once.\n",
+    "In python it becomes:\n",
+    "\n",
+    "```python\n",
+    "y = dot(w,hstack([1, x]))\n",
+    "```\n",
+    "### Learning\n",
+    "Learning is simply given by:\n",
+    "$$\n",
+    "\\Delta w_i = \\eta (\\hat{y} - y)x_i\n",
+    "$$\n",
+    "where $\\hat{y}$ is the desired value of the output unit with the input $\\mathbf{p}_k$.\n"
    ]
   },
   {
@@ -36,6 +53,13 @@
    "source": [
     "%matplotlib inline\n",
     "from pylab import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementing a simulation"
    ]
   },
   {
@@ -196,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -367,7 +391,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
