--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -86,8 +86,7 @@
     "```python\n",
     "x = sgn(dot(w,x))\n",
     "```\n",
-    "that is far simpler than writing two nested loops and storing previous values in another vector, and also produces a much efficient \n",
-    "code in terms of speed!!  \n",
+    "*Using linear algebra in a neural network implementation is far simpler than writing loops, it is less error prone and also produces a much efficient code in terms of speed!!*\n",
     "\n",
     "#### Asynchronous update\n",
     "\n",
@@ -652,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -824,7 +823,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
