--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# The perceptron\n",
     "\n",
-    "Perceptrons are the simpliest form of feedforward networks. and it is a [linear classifier](https://en.wikipedia.org/wiki/Linear_classifier). A perceptron is basically formed by a layer of input units and a layer of output units. In the simpliest case the output layer is formed by just one unit:\n",
+    "Perceptrons, invented in the [1957]( https://en.wikipedia.org/wiki/Perceptron#History) by Frank Rosenblatt, are the simpliest form of feedforward networks. They are [linear classifiers](https://en.wikipedia.org/wiki/Linear_classifier) because they find a linear function to predict if a piece of data belongs to a determined class or not. A perceptron is basically formed by a layer of input units and a layer of output units. In the simpliest case the output layer is formed by just one unit:\n",
     "\n",
     "![](perceptron.svg)\n",
-    "### Spreading\n",
-    "At each timestep of the simulation the first layer of units $\\mathbf{x}=[x_0,\\dots,x_n]$ is directly triggered by the input vector $\\mathbf{p}_k=[p_{k0},\\dots,p_{kn}]$. One unit of this layer, the bias, is not included in this update. instead it is permanently set to 1.\n",
+    "### Spreading  of activations\n",
+    "At each timestep of the simulation the first layer of units $\\mathbf{x}=[x_0,\\dots,x_n]$ is filled up with an input vector $\\mathbf{p}_k=[p_{k0},\\dots,p_{kn}]$. One unit of this layer, the bias, is not included in this update. instead it is permanently set to 1.\n",
     "Each connection from a unit of the first layer to the output unit has a weight that is initially set to 0. The activation of the output unit is given by the weighted sum of the input units plus the weighted bias:\n",
     "$$\n",
     "y = \\sum_{i=1}^{n+1} w_i x_i + w_0\n",
@@ -30,19 +30,44 @@
     "In python it becomes:\n",
     "\n",
     "```python\n",
-    "y = dot(w,hstack([1, x]))\n",
+    "tx = hstack([1, x])\n",
+    "y = dot(w,tx)\n",
     "```\n",
+    "*Using linear algebra in a neural network implementation is far simpler than writing loops, it is less error prone and also produces a much efficient code in terms of speed!!*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Learning\n",
-    "Learning is simply given by:\n",
+    "Learning consists in updating the weights so that the weighted sum $y$ is more and more similar to a desired output $o_k$ when we give the input $p_k$ to the network.\n",
+    "In perceptrons learning can be done online, meaning that we can update the weights af\n",
+    "In practice learning is given at each timestep by:\n",
     "$$\n",
-    "\\Delta w_i = \\eta (\\hat{y} - y)x_i\n",
+    "\\Delta w_i = \\eta (o_k - y)\\tilde{x}_i\n",
     "$$\n",
-    "where $\\hat{y}$ is the desired value of the output unit with the input $\\mathbf{p}_k$.\n"
+    "or, in linear algebra notation:\n",
+    "$$\n",
+    "\\Delta \\mathbf{w} = \\eta(o_k - y)\\mathbf{\\tilde{x}} \n",
+    "$$\n",
+    "where $\\eta$ is a value determining the rate of weight change per timestep (it is typically very little) and $o_k - y$ is the error in reproducing the desired value.\n",
+    "In python we write:\n",
+    "```python\n",
+    "w += eta*(o - y)*tx\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A first simulation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -58,8 +83,101 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w = [ 0.00   0.00 0.00 ] - timestep =   0.00\n",
+      "w = [ 0.39   0.10 0.29 ] - timestep = 100.00\n",
+      "w = [ 0.48   0.08 0.40 ] - timestep = 200.00\n",
+      "w = [ 0.49   0.05 0.44 ] - timestep = 300.00\n",
+      "w = [ 0.50   0.03 0.47 ] - timestep = 400.00\n",
+      "w = [ 0.50   0.02 0.48 ] - timestep = 500.00\n",
+      "w = [ 0.50   0.01 0.49 ] - timestep = 600.00\n",
+      "w = [ 0.50   0.01 0.49 ] - timestep = 700.00\n",
+      "w = [ 0.50   0.00 0.50 ] - timestep = 800.00\n",
+      "w = [ 0.50   0.00 0.50 ] - timestep = 900.00\n",
+      "\n",
+      "\n",
+      "x = [ 1.00   1.00 0.00 ]\n",
+      "w = [ 0.50   0.00 0.50 ]\n",
+      "y =          0.50 \n",
+      "\n",
+      "x = [ 1.00   0.00 1.00 ]\n",
+      "w = [ 0.50   0.00 0.50 ]\n",
+      "y =          1.00 \n"
+     ]
+    }
+   ],
    "source": [
-    "## Implementing a simulation"
+    "# constants\n",
+    "n = 2         # number of input elements\n",
+    "np = 2        # unmber of input patterns\n",
+    "eta = 0.01    # learning rate\n",
+    "stime = 1000  # number of timesteps\n",
+    "\n",
+    "# each row is an input pattern\n",
+    "P = array([ [1.0, 0.0], [0.0, 1.0] ])\n",
+    "# each element is the desired output \n",
+    "# relative to an input pattern\n",
+    "o = array([0.5, 1.0])\n",
+    "\n",
+    "#initialize weights\n",
+    "w = zeros(n+1)\n",
+    "\n",
+    "for t in xrange(stime) :\n",
+    "    \n",
+    "    # reiterate the input pattern \n",
+    "    # sequence through timesteps\n",
+    "    k = t%np\n",
+    "    # bias-plus-input vector\n",
+    "    tx = hstack([1,P[k]])\n",
+    "    \n",
+    "    # weighted sum - dot product\n",
+    "    y = dot(w,tx)\n",
+    "    \n",
+    "    # learning\n",
+    "    w += eta*(o[k] - y)*tx\n",
+    "    \n",
+    "    # print weights every 100th timestep\n",
+    "    # (the '*' operator unpacks a container \n",
+    "    # into its elements)    \n",
+    "    if t % 100 == 0:\n",
+    "        print \"w = [ {:4.2f}   {:4.2f} {:4.2f} ] - \" \\\n",
+    "            \"timestep = {:6.2f}\" \\\n",
+    "            .format( *hstack([w.round(2), t]) )\n",
+    "\n",
+    "print\n",
+    "\n",
+    "# print tests on the two input patterns\n",
+    "for k in xrange(np) :\n",
+    "    print \n",
+    "    tx = hstack([1,P[k]])\n",
+    "    y = dot(w,tx)\n",
+    "    print \"x = [ {:4.2f}   {:4.2f} {:4.2f} ]\" \\\n",
+    "        .format( *tx.round(2) )\n",
+    "    print \"w = [ {:4.2f}   {:4.2f} {:4.2f} ]\" \\\n",
+    "        .format( *w.round(2) )\n",
+    "    print \"y =          {:4.2f} \".format( y.round(2) )\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### What's behind the learning rule\n",
+    "Intuitively we see that the change of a weight depends on the error in the activation of the output unit *and* on the activation of the input unit that is connected to the output through that weight."
    ]
   },
   {
@@ -220,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -391,7 +509,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
