--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -540,7 +540,8 @@
     {
      "data": {
       "application/javascript": [
-       "$.getScript('https://kmahelona.github.io/ipython_notebook_goodies/ipython_notebook_toc.js')"
+       "$.getScript(\n",
+       "    'https://github.com/francesco-mannella/neunet-basics/blob/master/javascripts/ipython_notebook_toc.js')"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -552,7 +553,8 @@
    ],
    "source": [
     "%%javascript\n",
-    "$.getScript('https://kmahelona.github.io/ipython_notebook_goodies/ipython_notebook_toc.js')"
+    "$.getScript(\n",
+    "    'https://github.com/francesco-mannella/neunet-basics/blob/master/javascripts/ipython_notebook_toc.js')"
    ]
   }
  ],
