--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -357,6 +357,7 @@
     {
      "data": {
       "text/html": [
+       "<script src= 'https://github.com/francesco-mannella/neunet-basics/blob/master/javascripts/ipython_notebook_toc.js'></script>\n",
        "<style>\n",
        "/* PRINT */\n",
        "div.text_cell_render table, \n",
@@ -517,7 +518,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,33 +529,6 @@
     "    styles = open(\"../style/ipybn.css\", \"r\").read()\n",
     "    return HTML(styles)\n",
     "css_styling()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "$.getScript(\n",
-       "    'https://github.com/francesco-mannella/neunet-basics/blob/master/javascripts/ipython_notebook_toc.js')"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%javascript\n",
-    "$.getScript(\n",
-    "    'https://github.com/francesco-mannella/neunet-basics/blob/master/javascripts/ipython_notebook_toc.js')"
    ]
   }
  ],
