--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -288,6 +288,9 @@
     {
      "data": {
       "text/html": [
+       "<script src=\n",
+       "\"https://raw.githubusercontent.com/francesco-mannella/neunet-basics/master/javascripts/ipython_notebook_toc.js\">\n",
+       "</script>\n",
        "<style>\n",
        "/* PRINT */\n",
        "div.text_cell_render table, \n",
@@ -448,7 +451,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
