--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -288,9 +288,6 @@
     {
      "data": {
       "text/html": [
-       "<script src=\n",
-       "\"https://raw.githubusercontent.com/francesco-mannella/neunet-basics/master/javascripts/ipython_notebook_toc.js\">\n",
-       "</script>\n",
        "<style>\n",
        "/* PRINT */\n",
        "div.text_cell_render table, \n",
@@ -443,6 +440,74 @@
        ".input_area .cm-s-ipython span.cm-string-2 { color: #FFA0A0 } \n",
        "\n",
        "</style>\n",
+       "<script> \n",
+       "// Converts integer to roman numeral\n",
+       "function romanize(num) {\n",
+       "    var lookup = {M:1000,CM:900,D:500,CD:400,C:100,XC:90,L:50,XL:40,X:10,IX:9,V:5,IV:4,I:1},\n",
+       "    roman = '',\n",
+       "    i;\n",
+       "    for ( i in lookup ) {\n",
+       "        while ( num >= lookup[i] ) {\n",
+       "            roman += i;\n",
+       "            num -= lookup[i];\n",
+       "        }\n",
+       "    }\n",
+       "    return roman;\n",
+       "}\n",
+       "\n",
+       "// Builds a <ul> Table of Contents from all <headers> in DOM\n",
+       "function createTOC(){\n",
+       "    var toc = \"\";\n",
+       "    var level = 0;\n",
+       "    var levels = {}\n",
+       "    $('#toc').html('');\n",
+       "\n",
+       "    $(\":header\").each(function(i){\n",
+       "        if (this.id=='tocheading'){return;}\n",
+       "\n",
+       "        titleText = this.innerHTML;\n",
+       "        openLevel = this.tagName[1];\n",
+       "\n",
+       "        if (levels[openLevel]){\n",
+       "            levels[openLevel] += 1;\n",
+       "        } else{\n",
+       "            levels[openLevel] = 1;\n",
+       "        }\n",
+       "\n",
+       "        if (openLevel > level) {\n",
+       "            toc += (new Array(openLevel - level + 1)).join('<ul class=\"toc\">');\n",
+       "        } else if (openLevel < level) {\n",
+       "            toc += (new Array(level - openLevel + 1)).join(\"</ul>\");\n",
+       "            for (i=level;i>openLevel;i--){levels[i]=0;}\n",
+       "        }\n",
+       "\n",
+       "        level = parseInt(openLevel);\n",
+       "\n",
+       "\n",
+       "        if (this.id==''){this.id = this.innerHTML.replace(/ /g,\"-\")}\n",
+       "        var anchor = this.id;\n",
+       "\n",
+       "        toc += '<li><a href=\"#' + anchor + '\">' +  (levels[openLevel].toString()) + '. ' + titleText\n",
+       "        + '</a></li>';\n",
+       "\n",
+       "    });\n",
+       "\n",
+       "\n",
+       "    if (level) {\n",
+       "        toc += (new Array(level + 1)).join(\"</ul>\");\n",
+       "    }\n",
+       "\n",
+       "\n",
+       "    $('#toc').append(toc);\n",
+       "\n",
+       "};\n",
+       "\n",
+       "// Executes the createToc function\n",
+       "setTimeout(function(){createTOC();},100);\n",
+       "\n",
+       "// Rebuild to TOC every minute\n",
+       "setInterval(function(){createTOC();},60000);\n",
+       "</script>\n",
        "\n",
        "\n",
        "\n"
@@ -451,7 +516,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
