--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -289,6 +289,9 @@
      "data": {
       "text/html": [
        "<style>\n",
+       "\n",
+       "#toc {font-size: 14px; line-height: 120%}\n",
+       "\n",
        "/* PRINT */\n",
        "div.text_cell_render table, \n",
        "div.text_cell_render  tr,\n",
@@ -516,7 +519,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
