--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# The perceptron\n",
+    "\n",
+    "Perceptrons, invented in the [1957]( https://en.wikipedia.org/wiki/Perceptron#History) by Frank Rosenblatt, are the simpliest form of feedforward networks. They are [linear classifiers](https://en.wikipedia.org/wiki/Linear_classifier) because they find a linear function to predict if a piece of data belongs to a determined class or not. A perceptron is basically formed by a layer of input units and a layer of output units. In the simpliest case the output layer is formed by just one unit:\n",
+    "\n",
+    "![](perceptron.svg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>Table of contents</div>\n",
     "<div id=\"toc\"></div>"
    ]
   },
@@ -11,11 +23,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The perceptron\n",
-    "\n",
-    "Perceptrons, invented in the [1957]( https://en.wikipedia.org/wiki/Perceptron#History) by Frank Rosenblatt, are the simpliest form of feedforward networks. They are [linear classifiers](https://en.wikipedia.org/wiki/Linear_classifier) because they find a linear function to predict if a piece of data belongs to a determined class or not. A perceptron is basically formed by a layer of input units and a layer of output units. In the simpliest case the output layer is formed by just one unit:\n",
-    "\n",
-    "![](perceptron.svg)\n",
     "### Spreading  of activations\n",
     "At each timestep of the simulation the first layer of units $\\mathbf{x}=[x_0,\\dots,x_n]$ is filled up with an input vector $\\mathbf{p}_k=[p_{k0},\\dots,p_{kn}]$. One unit of this layer, the bias, is not included in this update. instead it is permanently set to 1.\n",
     "Each connection from a unit of the first layer to the output unit has a weight that is initially set to 0. The activation of the output unit is given by the weighted sum of the input units plus the weighted bias:\n",
@@ -69,12 +76,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A first simulation"
+    "### A simple simulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us start by implementing a very simple network. \n",
+    "Our input "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -94,11 +109,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w = [ 0.00   0.00 0.00 ] - timestep =    0\n",
+      "w = [ 0.39   0.10 0.29 ] - timestep =  100\n",
+      "w = [ 0.48   0.08 0.40 ] - timestep =  200\n",
+      "w = [ 0.49   0.05 0.44 ] - timestep =  300\n",
+      "w = [ 0.50   0.03 0.47 ] - timestep =  400\n",
+      "w = [ 0.50   0.02 0.48 ] - timestep =  500\n",
+      "w = [ 0.50   0.01 0.49 ] - timestep =  600\n",
+      "w = [ 0.50   0.01 0.49 ] - timestep =  700\n",
+      "w = [ 0.50   0.00 0.50 ] - timestep =  800\n",
+      "w = [ 0.50   0.00 0.50 ] - timestep =  900\n",
+      "\n",
+      "\n",
+      "x = [ 1.00   1.00 0.00 ]\n",
+      "w = [ 0.50   0.00 0.50 ]\n",
+      "y =          0.50 \n",
+      "\n",
+      "x = [ 1.00   0.00 1.00 ]\n",
+      "w = [ 0.50   0.00 0.50 ]\n",
+      "y =          1.00 \n"
+     ]
+    }
+   ],
    "source": [
     "# constants\n",
     "n = 2         # number of input elements\n",
@@ -157,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### What's behind the learning rule\n",
+    "### What's behind the learning rule\n",
     "Intuitively we see that the change of a weight depends on the error in the activation of the output unit *and* on the activation of the input unit that is connected to the output through that weight."
    ]
   },
@@ -172,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -196,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -217,14 +258,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false,
     "run_control": {
      "marked": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-93-0565ef5efc10>, line 41)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-93-0565ef5efc10>\"\u001b[1;36m, line \u001b[1;32m41\u001b[0m\n\u001b[1;33m    .draw()\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "trials = 500\n",
     "eta = 0.01\n",
@@ -261,7 +311,12 @@
     "               aspect = 'auto', cmap = cm.copper,\n",
     "                   vmin=0, vmax=1)\n",
     "        ax2.set_axis_off()\n",
-    "        fig.canvas.draw()\n",
+    "        fig.canvas\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        .draw()\n",
     "         \n",
     "        if win_count == windows - 1 :\n",
     "            show()"
@@ -277,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -290,7 +345,15 @@
       "text/html": [
        "<style>\n",
        "\n",
-       "#toc {font-size: 14px; line-height: 120%}\n",
+       "/* PRINT */\n",
+       "\n",
+       "#toc ol {\n",
+       "    font-size: 12px; \n",
+       "    line-height: 120%; \n",
+       "    padding: 0; \n",
+       "    margin-left: 12px; \n",
+       "    list-style-type: decimal;\n",
+       "}\n",
        "\n",
        "/* PRINT */\n",
        "div.text_cell_render table, \n",
@@ -300,22 +363,22 @@
        "}\n",
        "div.MathJax_Display {padding: 40px 5px 40px 5px}\n",
        "\n",
-       "div.input_area  { padding:10px; }\n",
+       "div.input_area  { padding: 10px; }\n",
        ".rendered_html p{ text-align: left }\n",
-       "div.input_area>div.highlight  { padding:10px; }\n",
+       "div.input_area>div.highlight  { padding:10px; overflow-x: hidden }\n",
        "\n",
        "/* FONT_CODE */\n",
-       ".input_area pre { font-size:10px; line-height: 120% }\n",
+       ".input_area pre { font-size:12px; line-height:120%; }\n",
        "\n",
        "/* FONT_TEXT */\n",
-       "div.text_cell_render { font-size:24px; text-align: left; line-height: 140% }\n",
+       "div.text_cell_render { font-size:16px;  line-height:120% }\n",
        "\n",
        "/* FONT_QUOTE */\n",
-       "div.text_cell_render pre { font-size:14px; line-height: 120% }\n",
+       ".text_cell_render pre { font-size:14px; line-height:120% }\n",
        "\n",
        "/* BACKGROUND */\n",
        "div .input_area { background-color:#333333;}\n",
-       "blockquote { background-color: #FFFF66; }\n",
+       "blockquote { background-color:#ffff66; }\n",
        "\n",
        "/* BUILTIN */\n",
        ".input_area .highlight .bp { color: #CD5C5C } /* Name.Builtin.Pseudo */\n",
@@ -401,10 +464,10 @@
        "/* JUPYTER */\n",
        "\n",
        "/* FONT_EDIT */\n",
-       ".cm-s-default span { font-size:24px; line-height:120% }\n",
+       ".cm-s-default span { font-size:16px; line-height:120% }\n",
        "\n",
        "/* BACKGROUND_EDIT */\n",
-       "div .cm-s-default { background-color: #dddddd;}\n",
+       "div .cm-s-default { background-color: #888888;}\n",
        "\n",
        "/* CURSOR */\n",
        ".input_area .CodeMirror div.CodeMirror-cursor { border-left: 5px solid #FFFFFF; }\n",
@@ -442,8 +505,7 @@
        ".input_area .cm-s-ipython span.cm-string { color: #FFA0A0 } \n",
        ".input_area .cm-s-ipython span.cm-string-2 { color: #FFA0A0 } \n",
        "\n",
-       "</style>\n",
-       "<script> \n",
+       "</style><script> \n",
        "// Converts integer to roman numeral\n",
        "function romanize(num) {\n",
        "    var lookup = {M:1000,CM:900,D:500,CD:400,C:100,XC:90,L:50,XL:40,X:10,IX:9,V:5,IV:4,I:1},\n",
@@ -470,6 +532,8 @@
        "\n",
        "        titleText = this.innerHTML;\n",
        "        openLevel = this.tagName[1];\n",
+       "        if(openLevel>1) {\n",
+       "            openLevel-=1\n",
        "\n",
        "        if (levels[openLevel]){\n",
        "            levels[openLevel] += 1;\n",
@@ -478,9 +542,9 @@
        "        }\n",
        "\n",
        "        if (openLevel > level) {\n",
-       "            toc += (new Array(openLevel - level + 1)).join('<ul class=\"toc\">');\n",
+       "            toc += (new Array(openLevel - level + 1)).join('<ol type=\"1\" class=\"toc\">');\n",
        "        } else if (openLevel < level) {\n",
-       "            toc += (new Array(level - openLevel + 1)).join(\"</ul>\");\n",
+       "            toc += (new Array(level - openLevel + 1)).join(\"</ol>\");\n",
        "            for (i=level;i>openLevel;i--){levels[i]=0;}\n",
        "        }\n",
        "\n",
@@ -490,14 +554,15 @@
        "        if (this.id==''){this.id = this.innerHTML.replace(/ /g,\"-\")}\n",
        "        var anchor = this.id;\n",
        "\n",
-       "        toc += '<li><a href=\"#' + anchor + '\">' +  (levels[openLevel].toString()) + '. ' + titleText\n",
+       "        toc += '<li><a href=\"#' + anchor + '\">' + titleText\n",
        "        + '</a></li>';\n",
+       "    }\n",
        "\n",
        "    });\n",
        "\n",
        "\n",
        "    if (level) {\n",
-       "        toc += (new Array(level + 1)).join(\"</ul>\");\n",
+       "        toc += (new Array(level + 1)).join(\"</ol>\");\n",
        "    }\n",
        "\n",
        "\n",
@@ -511,15 +576,13 @@
        "// Rebuild to TOC every minute\n",
        "setInterval(function(){createTOC();},60000);\n",
        "</script>\n",
-       "\n",
-       "\n",
        "\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
