working on animations

--- a/course/perceptron.ipynb
+++ b/course/perceptron.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Perceptrons, invented in the [1957]( https://en.wikipedia.org/wiki/Perceptron#History) by Frank Rosenblatt, are the simpliest form of feedforward networks. They are [linear classifiers](https://en.wikipedia.org/wiki/Linear_classifier) because they find a linear function to predict if a piece of data belongs to a determined class or not. A perceptron is basically formed by a layer of input units and a layer of output units. In the simpliest case the output layer is formed by just one unit:\n",
     "\n",
-    "![](perceptron.svg)"
+    "![](perceptron.png)"
    ]
   },
   {
