working on animations

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -1191,7 +1191,7 @@
        "}\n",
        "div.MathJax_Display {padding: 40px 5px 40px 5px}\n",
        "\n",
-       "div.input_area  { padding: 10px; }\n",
+       "div.input_area  { padding: 10px; overflow-x: scroll }\n",
        ".rendered_html p{ text-align: left }\n",
        "div.input_area>div.highlight  { padding:10px; overflow-x: hidden }\n",
        "\n",
@@ -1410,7 +1410,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
